--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,10 +43,6 @@
     .mobile-menu{
         display: block;
     }
-    .banner-img img {
-        border-radius: .5rem .5rem .5rem 25rem;
-        margin-top: 0;
-    }
     .header-section{
         padding-top: 5rem;
         height: 4vh;
@@ -63,7 +59,11 @@
     }
     .banner-img img {
         width: 29rem;
+        margin-top: 0;
         border-radius: .5rem .5rem .5rem 12rem;
+    }
+    .total-project {
+        margin-left: 3rem;
     }
     .banner-img-shap1 {
         width: 8rem;
@@ -100,6 +100,9 @@
         width: 5.6rem;
         height: 5.6rem;
         border-radius: .5rem 2.5rem .5rem 2.5rem;
+    }
+    .card-hero {
+        padding: 0 2rem;
     }
     .card{
         padding: 4rem 0;
