--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ NAVIGATION
 ========================= */
 .header-section{
     width: 100%;
-    height: 12vh;
+    height: 12rem;
     display: flex;
     align-items: center;
     padding-top: 5rem;
@@ -278,7 +278,7 @@ BANNER SECTION
     top: 0;
     z-index: 999;
     width: 100%;
-    height: 8vh;
+    height: 8rem;
     background: lightpink;
 }
 /* =========================
