--- a/css/responsive.css
+++ b/css/responsive.css
@@ -45,7 +45,7 @@
     }
     .header-section{
         padding-top: 5rem;
-        height: 4vh;
+        height: 4rem;
     }
     .mobile-menu {
         top: 1rem;
@@ -173,7 +173,7 @@
     }
     .header-section{
         padding-top: 5rem;
-        height: 4vh;
+        height: 4rem;
     }
     .mobile-menu {
         top: 1rem;
